--- a/styles.css
+++ b/styles.css
@@ -5,22 +5,74 @@
 
 }
 
-.main-container{background-color:  hsl(235, 21%, 11%);}
+body{height:90vh;}
+
 
 .header{
-background-color: rgb(136, 68, 135);
+background: linear-gradient( 45deg, hsl(192, 100%, 67%), hsl(280, 87%, 65%));
+height:30vh;
+
 }
 .header h1{
     text-align:left;
-    margin-left:300px;
-    letter-spacing: 5px;
+    margin-left:400px;
+    padding-top:65px;
+    letter-spacing: 15px;
+    color:#f1f1f1;
+    font-size: 60px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight:bold;
+
 
 }
 
-.main-container{}
+.main-container{background-color:  hsl(235, 21%, 11%);
+    height:90vh;
+
+}
 
 
-.form{}
+
+.form{
+    background-color: hsl(233, 34%, 32%);
+    width:30vw;
+    text-align:center;
+    /* margin-left:30%; */
+    position: relative;
+    left:32.5%;
+    bottom:8.5%;
+    height:6%;
+    display: flex;
+    /* justify-content: flex-start; */
+    /* justify-content: space-evenly; */
+    align-items: flex-start;
+    border-radius: 2px;
+    
+}
+
+.form input {
+margin-top:10px;
+margin-left:20px;
+height:20px;
+border:none;
+font-size: 20px;
+background-color: hsl(233, 34%, 32%);
+color:hsl(232, 19%, 51%);
+
+
+}
+.form:checked{
+    border:none;
+}
+/* 
+.form button{
+margin-top:5px;
+margin-left:20px;
+height:20px;
+border:none;
+border-radius: 3px;
+background-color:hsl(231, 66%, 62%);
+} */
 
 button:hover{
     background-color:rgb(46, 136, 233); 
@@ -32,4 +84,7 @@ button:hover{
 .todo-list{}
 
 
-.footer{}
+.footer{
+    color:#f1f1f1;
+    height:0px;
+}
